# m3u_playlist_browser

./: Cargo.toml  README.md  config.txt
src/: main.rs
static/: script.js  styles.css
