[package]
name = "m3u_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
m3u = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.0"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10"
actix-files = "0.6.2"

